# TajweedTutor

./: App.js  IMPLEMENTATION_SUMMARY.md  MODULE_3_DOCUMENTATION.md  MODULE_3_SETUP.md  PRONUNCIATION_TESTING_GUIDE.md  README.md  app.json  package-lock.json  package.json
android/: build.gradle  settings.gradle
android/app/: build.gradle  google-services.json
android/app/src/main/cpp/: CMakeLists.txt  tajweed_audio.cpp  tajweed_audio.h
ios/: GoogleService-Info.plist  Podfile
ios/TajweedTutor/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/TajweedTutor.xcodeproj/: project.pbxproj
ios/TajweedTutor.xcodeproj/xcshareddata/xcschemes/: TajweedTutor.xcscheme
ios/TajweedTutor.xcworkspace/: contents.xcworkspacedata
ios/TajweedTutorTests/: TajweedTutorTests.m
src/components/: FirebaseTest.js  index.js
src/components/pickers/: index.js
src/navigation/: index.js
src/navigation/app/: bottomTab.js  index.js
src/navigation/auth/: index.js
src/screens/app/: index.js
src/screens/app/account/: index.js
src/screens/app/home/: index.js
src/screens/app/progress/: index.js
src/screens/app/pronunciationDemo/: index.js
src/screens/app/pronunciationTest/: index.js
src/screens/app/qaida/: index.js
src/screens/app/quran/: index.js
src/screens/app/quranAyah/: index.js
src/screens/app/quranSurah/: index.js
src/screens/app/settings/: index.js
src/screens/auth/: index.js
src/services/: audioDataService.js  audioDownloadManager.js  audioService.js  pronunciationTestService.js  qaidaData.js
src/services/constants/: index.js
src/services/contexts/: AuthContext.js
src/services/firebaseUtilities/: appDataService.js  firestore.js  qaidaService.js
src/services/nativeModules/: TajweedAudioModule.js
(+16 files in other folders)
